[package]
name = "jlivertool-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Compression
flate2 = { workspace = true }
brotli = { workspace = true }

# Crypto
md-5 = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
parking_lot = { workspace = true }
urlencoding = { workspace = true }

# Database
rusqlite = { workspace = true }

# Async traits
async-trait = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Speech",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[dev-dependencies]
tokio-test = "0.4"
